Added auto-generated ToC to TIP 247

--- a/tip/247.md
+++ b/tip/247.md
@@ -7,14 +7,70 @@
 	Author:		Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Created:	01-Jun-2005
 -----
+<!-- TOC BEGIN (auto generated with tiptoc) -->
+* <a href='#toc-2'>Abstract</a>
+    * <a href='#toc-3'>NOTE</a>
+* <a href='#toc-4'>Introduction</a>
+* <a href='#toc-5'>Packages and Header Files</a>
+    * <a href='#toc-6'>Package Prefixes</a>
+    * <a href='#toc-7'>Version Numbers</a>
+    * <a href='#toc-8'>Overall Structure</a>
+    * <a href='#toc-9'>Header File Structure</a>
+    * <a href='#toc-10'>\_ANSI\_ARGS\_ Prototypes</a>
+    * <a href='#toc-11'>MODULE\_LOCAL Prototypes</a>
+* <a href='#toc-12'>How to Organize a Code File</a>
+    * <a href='#toc-13'>The File Header Page</a>
+    * <a href='#toc-14'>Procedure Headers</a>
+    * <a href='#toc-15'>Procedure Declarations</a>
+    * <a href='#toc-16'>Parameter Order</a>
+    * <a href='#toc-17'>Procedure Bodies</a>
+* <a href='#toc-18'>Naming Conventions</a>
+    * <a href='#toc-19'>General Considerations</a>
+    * <a href='#toc-20'>Basic Syntax Rules</a>
+    * <a href='#toc-21'>Names Reflect Package Structure</a>
+    * <a href='#toc-22'>Standard Names</a>
+* <a href='#toc-23'>Low-Level Coding Conventions</a>
+    * <a href='#toc-24'>Indents are 4 Spaces</a>
+    * <a href='#toc-25'>Code Comments Occupy Full Lines</a>
+    * <a href='#toc-26'>Declaration Comments are Side-By-Side</a>
+    * <a href='#toc-27'>Curly Braces: \{ Goes at the End of a Line</a>
+    * <a href='#toc-28'>Continuation Lines are Indented 8 Spaces</a>
+    * <a href='#toc-29'>Avoid Macros Except for Simple Things</a>
+* <a href='#toc-30'>Documenting Code</a>
+    * <a href='#toc-31'>Document Things with Wide Impact</a>
+    * <a href='#toc-32'>Don't Just Repeat What's in the Code</a>
+    * <a href='#toc-33'>Document Each Thing in Exactly One Place</a>
+    * <a href='#toc-34'>Write Clean Code</a>
+    * <a href='#toc-35'>Document As You Go</a>
+    * <a href='#toc-36'>Document Tricky Situations</a>
+* <a href='#toc-37'>Testing</a>
+    * <a href='#toc-38'>Basics</a>
+    * <a href='#toc-39'>Organizing Tests</a>
+    * <a href='#toc-40'>Coverage</a>
+    * <a href='#toc-41'>Memory Allocation</a>
+    * <a href='#toc-42'>Fixing Bugs</a>
+    * <a href='#toc-43'>Tricky Features</a>
+    * <a href='#toc-44'>Test Independence</a>
+* <a href='#toc-45'>Porting Issues</a>
+    * <a href='#toc-46'>Stick to Standards</a>
+    * <a href='#toc-47'>Minimize \#ifdefs</a>
+    * <a href='#toc-48'>Organize by Feature, Not by System</a>
+    * <a href='#toc-49'>Use Emulation</a>
+    * <a href='#toc-50'>Use Autoconf</a>
+    * <a href='#toc-51'>Porting Header File</a>
+* <a href='#toc-52'>Miscellaneous</a>
+    * <a href='#toc-53'>Changes Files</a>
+* <a href='#toc-54'>Copyright</a>
 
-# Abstract
+<!-- TOC END -->
+
+# <a id='toc-2'></a>Abstract
 
 This document describes the set of conventions used for writing C code to go
 into the Tcl and Tk core. It is also recommended that extensions be written in
 the same style for clarity.
 
-## NOTE
+## <a id='toc-3'></a>NOTE
 
 _A transcription of the original version \(dated September 1, 1994\) of this
 file into PDF is available online at <http://tcl.sourceforge.net/engManual.pdf>
@@ -22,7 +78,7 @@ file into PDF is available online at <http://tcl.sourceforge.net/engManual.pdf>
 
 _Also note that the figures might lag the text. We'll fix them eventually._
 
-# Introduction
+# <a id='toc-4'></a>Introduction
 
 This is a manual for people who are developing C code for Tcl, Tk, and their
 extensions and applications. It describes a set of conventions for writing
@@ -73,7 +129,7 @@ Section 7 describes how to write and maintain test suites. Section 8 describes
 how to make code portable without making it unreadable too. Section 9 contains
 a few miscellaneous topics, such as keeping a change log.
 
-# Packages and Header Files
+# <a id='toc-5'></a>Packages and Header Files
 
 Tcl applications consist of collections of _packages_. Each package provides
 code to implement a related set of features. For example, Tcl itself is a
@@ -88,7 +144,7 @@ later sections discuss conventions for code files. You may also wish to review
 Chapter 31 of the Tcl book for additional information on packages, such as how
 to interface them to the rest of an application.
 
-## Package Prefixes
+## <a id='toc-6'></a>Package Prefixes
 
 Each package has a unique short _prefix_. The prefix is used in file names,
 procedure names, and variable names in order to prevent name conflicts with
@@ -96,7 +152,7 @@ other packages. For example, the prefix for Tcl is tcl; Tcl's exported header
 file is called tcl.h and exported procedures and variables have names like
 Tcl\_Eval.
 
-## Version Numbers
+## <a id='toc-7'></a>Version Numbers
 
 Each package has a two-part version number such as 7.4. The first number \(7\)
 is called the major version number and the second \(4\) is called the minor
@@ -110,7 +166,7 @@ existing code and scripts will have to be modified to run with the new
 version, then the major version number increments and the minor version number
 resets to zero \(e.g., from 7.4 to 8.0\).
 
-## Overall Structure
+## <a id='toc-8'></a>Overall Structure
 
 A package typically consists of several code files, plus at least two header
 files, plus additional files for building and configuring the package, such as
@@ -171,7 +227,7 @@ that either _\(a\)_ you \#include every header in every C file \(in which case
 there's not much advantage to having the separate .h files\) or _\(b\)_ you are
 constantly adding and deleting \#include statements as you modify source files.
 
-## Header File Structure
+## <a id='toc-9'></a>Header File Structure
 
 Figure 1 illustrates the format of a header file. Your header files should
 follow this structure exactly: same indentation, same order of information,
@@ -232,7 +288,7 @@ Each header file contains the following parts, which are labelled in Figure 1:
     symbol; if your header file doesn't \#include tcl.h, you can copy the code
     from tcl.h to your header file.
 
-## \_ANSI\_ARGS\_ Prototypes
+## <a id='toc-10'></a>\_ANSI\_ARGS\_ Prototypes
 
 Procedure prototypes _may_ use the \_ANSI\_ARGS\_ macro as shown in Figure 1.
 \_ANSI\_ARGS\_ makes it possible to write full procedure prototypes for the
@@ -257,7 +313,7 @@ resulting in the above example looking like:
 
 	   EXTERN int Tcl_Eval(Tcl_Interp *interp, const char *scriptPtr);
 
-## MODULE\_LOCAL Prototypes
+## <a id='toc-11'></a>MODULE\_LOCAL Prototypes
 
 _\(Not yet shown in any figure, to be used from Tcl 8.5 onwards for the Tcl
 and Tk core only.\)_
@@ -274,7 +330,7 @@ Example of usage:
 
 	   MODULE_SCOPE int TclIsLocalScalar(const char *src, int len);
 
-# How to Organize a Code File
+# <a id='toc-12'></a>How to Organize a Code File
 
 Each source code file should contain a related set of procedures, such as the
 implementation of a widget or canvas item type, or a set of procedures to
@@ -292,7 +348,7 @@ print a code file each procedure header will start at the top of the page,
 which makes for easier reading. Second, you can browse through all of the
 procedures in a file by searching for the formfeed characters.
 
-## The File Header Page
+## <a id='toc-13'></a>The File Header Page
 
 The first page of a code file is a header page. It contains overall
 information that is relevant throughout the file, which consists of everything
@@ -345,7 +401,7 @@ files. For example, the internal header file for a package has extern
 statements for all of the procedures that are used by multiple files within
 the package but aren't exported outside it.
 
-## Procedure Headers
+## <a id='toc-14'></a>Procedure Headers
 
 Each page after the first one in a file should contain exactly one procedure.
 The page should begin with a procedure header that gives overall documentation
@@ -387,7 +443,7 @@ etc.\).
 The Results and Side Effects parts of the header may be omitted _only_ if
 the function has no results or side effects respectively.
 
-## Procedure Declarations
+## <a id='toc-15'></a>Procedure Declarations
 
 The procedure declaration should also follow exactly the syntax in Figures 3
 and 4. The first line gives the type of the procedure's result. All procedures
@@ -410,7 +466,7 @@ argument checking.
 _Note that_ for new code it is preferred to use ANSI declarations,
 especially if the code will not build on non-ANSI compilers.
 
-## Parameter Order
+## <a id='toc-16'></a>Parameter Order
 
 Procedure parameters may be divided into three categories. In parameters only
 pass information into the procedure \(either directly or by pointing to
@@ -434,13 +490,13 @@ is a set of rules for deciding on the order of parameters to a procedure:
     procedure. Typically the ClientData is a pointer to the structure managed
     by the callback, so this is really the same as rule 2.
 
-## Procedure Bodies
+## <a id='toc-17'></a>Procedure Bodies
 
 The body of a procedure follows the declaration. See Section 5 for the coding
 conventions that govern procedure bodies. The curly braces enclosing the body
 should be on separate lines as shown in Figures 3 and 4.
 
-# Naming Conventions
+# <a id='toc-18'></a>Naming Conventions
 
 Choosing names is one of the most important aspects of programming. Good names
 clarify the function of a program and reduce the need for other documentation.
@@ -459,7 +515,7 @@ lists specific rules for name syntax, such as capitalization, and finally
 describes how to use package prefixes to clarify the module structure of your
 code.
 
-## General Considerations
+## <a id='toc-19'></a>General Considerations
 
 The ideal variable name is one that instantly conveys as much information as
 possible about the purpose of the variable it refers to. When choosing names,
@@ -492,7 +548,7 @@ be misinterpreted or confused. Here are some things to consider:
     its name to _src_ makes the name less generic and hence conveys more
     information.
 
-## Basic Syntax Rules
+## <a id='toc-20'></a>Basic Syntax Rules
 
 Below are some specific rules governing the syntax of names. Please follow the
 rules exactly, since they make it possible to determine certain properties of
@@ -551,7 +607,7 @@ a variable just from its name.
     good idea; in any case, Tcl procedure and variable names should follow the
     same rules as C procedures and variables.
 
-## Names Reflect Package Structure
+## <a id='toc-21'></a>Names Reflect Package Structure
 
 Names that are exported outside a single file must include the package prefix
 in order to make sure that they don't conflict with global names defined in
@@ -584,7 +640,7 @@ names:
 
 		   static int initialized;
 
-## Standard Names
+## <a id='toc-22'></a>Standard Names
 
 The following variable names are used consistently throughout Tcl and Tk.
 Please use these names for the given purposes in any code you write, and don't
@@ -615,13 +671,13 @@ use the names for other purposes.
     named tkwin and immediately copy the argument into a local variable named
     winPtr in order to access the contents of the window structure.
 
-# Low-Level Coding Conventions
+# <a id='toc-23'></a>Low-Level Coding Conventions
 
 This section describes several low-level syntactic rules for writing C code.
 The reason for having these rules is not because they're better than all other
 ways of structuring code, but in order to make all our code look the same.
 
-## Indents are 4 Spaces
+## <a id='toc-24'></a>Indents are 4 Spaces
 
 Each level of indentation should be four spaces. There are ways to set 4-space
 indents in all editors that I know of. Be sure that your editor really uses
@@ -631,7 +687,7 @@ wide in other editors.
 
 If you use tabs, they _must_ be to 8-space indents.
 
-## Code Comments Occupy Full Lines
+## <a id='toc-25'></a>Code Comments Occupy Full Lines
 
 Comments that document code \(as opposed to declarations\) should occupy full
 lines, rather than being tacked onto the ends of lines containing code. The
@@ -650,7 +706,7 @@ full lines, with lined-up stars, the /\* and \*/ symbols on separate lines, and
 blank separator lines around each comment \(except that the leading blank line
 can be omitted if the comment is at the beginning of a code block\).
 
-## Declaration Comments are Side-By-Side
+## <a id='toc-26'></a>Declaration Comments are Side-By-Side
 
 When documenting the arguments for procedures and the members of structures,
 place the comments on the same lines as the declarations. Figures 3 and 4 show
@@ -669,7 +725,7 @@ members and procedure arguments.
 Declaration comments should normally begin in the 33rd column \(i.e. where you
 would be after 32 spaces or 4 tabs\).
 
-## Curly Braces: \{ Goes at the End of a Line
+## <a id='toc-27'></a>Curly Braces: \{ Goes at the End of a Line
 
 Open curly braces should not \(normally\) appear on lines by themselves.
 Instead, they should be placed at the end of the preceding line. Close curly
@@ -715,7 +771,7 @@ following:
 	       ...
 	   }
 
-## Continuation Lines are Indented 8 Spaces
+## <a id='toc-28'></a>Continuation Lines are Indented 8 Spaces
 
 You should use continuation lines to make sure that no single line exceeds 80
 characters in length. Continuation lines should be indented 8 spaces so that
@@ -731,7 +787,7 @@ start with such an operator.
 
 ![Figure 7. Continuation lines are indented 8 spaces.](../assets/247fig7.png)
 
-## Avoid Macros Except for Simple Things
+## <a id='toc-29'></a>Avoid Macros Except for Simple Things
 
 \#define statements provide a fine mechanism for specifying constants
 symbolically, and you should always use them instead of embedding specific
@@ -751,7 +807,7 @@ Otherwise, if the macro is invoked with a complex argument such as a\*b or
 small\|\|red it may result in a parse error or, even worse, an unintended result
 that is difficult to debug.
 
-# Documenting Code
+# <a id='toc-30'></a>Documenting Code
 
 The purpose of documentation is to save time and reduce errors. Documentation
 is typically used for two purposes. First, people will read the documentation
@@ -767,7 +823,7 @@ easier than deciphering the code. Try to pick out the most important things
 that will help people to understand your code and focus on these in your
 documentation.
 
-## Document Things with Wide Impact
+## <a id='toc-31'></a>Document Things with Wide Impact
 
 The most important things to document are those that affect many different
 pieces of a program. Thus it is essential that every procedure interface,
@@ -788,7 +844,7 @@ provides enough information to figure out what is going on. For long
 procedures I place a comment block before each major piece of the procedure to
 clarify the overall flow through the procedure.
 
-## Don't Just Repeat What's in the Code
+## <a id='toc-32'></a>Don't Just Repeat What's in the Code
 
 The most common mistake I see in documentation \(besides it not being there at
 all\) is that it repeats what is already obvious from the code, such as this
@@ -841,7 +897,7 @@ the procedure's name. Here is a much more useful comment:
 This comment tells why you might want to use the procedure, in addition to
 what it does, which makes the comment much more useful.
 
-## Document Each Thing in Exactly One Place
+## <a id='toc-33'></a>Document Each Thing in Exactly One Place
 
 Systems evolve over time. If something is documented in several places, it
 will be hard to keep the documentation up to date as the system changes.
@@ -868,7 +924,7 @@ this body in the other places where the decision is used. If all else fails,
 add a block of comments to the header page of one of the files implementing
 the decision.
 
-## Write Clean Code
+## <a id='toc-34'></a>Write Clean Code
 
 The best way to produce a well-documented system is to write clean and simple
 code. This way there won't be much to document. If code is clean, it means
@@ -878,7 +934,7 @@ a simple concept behind the code. If not, perhaps you should rethink the code.
 If it takes a lot of documentation to explain a piece of code, it is a sign
 that you haven't found an elegant solution to the problem.
 
-## Document As You Go
+## <a id='toc-35'></a>Document As You Go
 
 It is extremely important to write the documentation as you write the code.
 It's very tempting to put off the documentation until the end; after all, the
@@ -899,7 +955,7 @@ of the procedures. This way I can think about the overall structure and how
 the pieces fit together before getting bogged down in the details of
 individual procedures.
 
-## Document Tricky Situations
+## <a id='toc-36'></a>Document Tricky Situations
 
 If code is non-obvious, meaning that its structure and correctness depend on
 information that won't be obvious to someone reading it for the first time, be
@@ -909,7 +965,7 @@ fixing a bug, be sure to add a comment explaining the problem and its
 solution. Of course, it's even better if you can fix the bug in a way that
 eliminates the subtle behavior, but this isn't always possible.
 
-# Testing
+# <a id='toc-37'></a>Testing
 
 One of the environments where Tcl works best is for testing. If all the
 functionality of an application is available as Tcl commands, you should be
@@ -923,7 +979,7 @@ of testing; all you need to do is type your test cases into a script file
 where they can be re-used, rather than typing them interactively where they
 vanish into the void after they're run.
 
-## Basics
+## <a id='toc-38'></a>Basics
 
 Tests should be organized into script files, where each file contains a
 collection of related tests. Individual tests should be based on the procedure
@@ -980,7 +1036,7 @@ Although it is possible to automatically generate names for tests, this is not
 recommended because it makes it difficult to search for the specific test in
 the test suite if all you have to go on is the test name.
 
-## Organizing Tests
+## <a id='toc-39'></a>Organizing Tests
 
 Organize your tests to match the code being tested. The best way to do this is
 to have one test file for each source code file, with the name of the test
@@ -999,7 +1055,7 @@ approach the relationship between tests and particular pieces of code is much
 less obvious, so it is harder to maintain the tests as the code evolves. I
 don't recommend using this approach for new tests.
 
-## Coverage
+## <a id='toc-40'></a>Coverage
 
 When writing tests, you should attempt to exercise every line of source code
 at least once. There will be occasionally be code that you can't exercise,
@@ -1028,7 +1084,7 @@ element, last element, only element, and neither first element nor last. Try
 to find all the places where different pieces of code interact in unusual
 ways, and exercise the different possible interactions.
 
-## Memory Allocation
+## <a id='toc-41'></a>Memory Allocation
 
 Tcl and Tk use a modified memory allocator that checks for several kinds of
 memory allocation errors, such as freeing a block twice, failing to free a
@@ -1105,7 +1161,7 @@ Even so, please use **ckalloc** and **ckfree** everywhere in your code, so
 that other people without access to the commercial checkers can still use the
 Tcl debugging allocator.
 
-## Fixing Bugs
+## <a id='toc-42'></a>Fixing Bugs
 
 Whenever you find a bug in your code it means that the test suite wasn't
 complete. As part of fixing the bug, you should add new tests that detect the
@@ -1116,7 +1172,7 @@ fixed something. Use bugs to refine your testing approach: think about what
 you might be able to do differently when you write tests in the future to keep
 bugs like this one from going undetected.
 
-## Tricky Features
+## <a id='toc-43'></a>Tricky Features
 
 I also use tests as a way of illustrating the need for tricky code. If a piece
 of code has an unusual structure, and particularly if the code is hard to
@@ -1129,7 +1185,7 @@ will be able to use the test to understand why the code needs to be the way it
 is. Illustrative tests are not a substitute for good documentation, but they
 provide a useful addition.
 
-## Test Independence
+## <a id='toc-44'></a>Test Independence
 
 Try to make tests independent of each other, so that each test can be
 understood in isolation. For example, one test shouldn't depend on commands
@@ -1148,7 +1204,7 @@ tests, modify the setup again, and so on. If you do this, it will be hard for
 people to figure out what the setup is at any given point and when they add
 tests later they are likely to break the setup.
 
-# Porting Issues
+# <a id='toc-45'></a>Porting Issues
 
 The X Window System, ANSI C, and POSIX provide a standard set of interfaces
 that make it possible to write highly portable code. However, some additional
@@ -1157,7 +1213,7 @@ As Tcl and Tk move from the UNIX world onto PCs and Macintoshes, porting
 issues will become even more important. This section contains a few tips on
 how to write code that can run on many different platforms.
 
-## Stick to Standards
+## <a id='toc-46'></a>Stick to Standards
 
 The easiest way to make your code portable is to use only library interfaces
 that are available everywhere \(or nearly everywhere\). For example, the ANSI C
@@ -1166,7 +1222,7 @@ on many platforms; if you code to these standards your packages will be quite
 portable. Avoid using system-specific library procedures, since they will
 introduce porting problems.
 
-## Minimize \#ifdefs
+## <a id='toc-47'></a>Minimize \#ifdefs
 
 Although there will be situations where you have to do things differently on
 different machines, \#ifdefs are rarely the best way to deal with these
@@ -1193,7 +1249,7 @@ should be a warning to you that something is wrong. See if you can find a way
 to re-organize the code \(perhaps using the techniques described later in this
 section\) to reduce the number of \#ifdefs.
 
-## Organize by Feature, Not by System
+## <a id='toc-48'></a>Organize by Feature, Not by System
 
 Don't think about porting issues in terms of specific systems. Instead, think
 in terms of specific features that are present or absent in the systems. For
@@ -1215,7 +1271,7 @@ running on several different systems, you'll find that many new systems can be
 handled with no additional work: their features are similar to those in
 systems you've already considered, so autoconf can handle them automatically.
 
-## Use Emulation
+## <a id='toc-49'></a>Use Emulation
 
 One of the cleanest ways to handle porting problems is with emulation: assume
 the existence of certain procedures, such as those in the POSIX standard, and
@@ -1256,7 +1312,7 @@ unistd.h in the system include directories and sets HAVE\_UNISTD\_H if it is
 present. If it isn't present, tclUnix.h includes a version from the Tcl source
 tree.
 
-## Use Autoconf
+## <a id='toc-50'></a>Use Autoconf
 
 The GNU autoconf program provides a powerful way to configure your code for
 different systems. With autoconf you write a script called configure.in that
@@ -1276,7 +1332,7 @@ for conditional compilation in the code.
 Use of libtool is not recommended; it tends to inhibit porting to anything
 other than fairly conventional UNIX platforms.
 
-## Porting Header File
+## <a id='toc-51'></a>Porting Header File
 
 In spite of all the above advice, you will still end up needing some
 conditional compilation, for example to include alternate header files where
@@ -1288,9 +1344,9 @@ your approach to portability, and you can see all of the porting issues in one
 place. You can look at tclPort.h and tkPort.h for examples of porting header
 files.
 
-# Miscellaneous
+# <a id='toc-52'></a>Miscellaneous
 
-## Changes Files
+## <a id='toc-53'></a>Changes Files
 
 Each package should contain a file named changes that keeps a log of all
 significant changes made to the package. The changes file provides a way for
@@ -1321,7 +1377,8 @@ higher detail within it. This has the advantage of having more tooling
 support, but tends to be so verbose that the shorter summaries in the changes
 file are still written up by the core maintainers before each release.\)_
 
-# Copyright
+# <a id='toc-54'></a>Copyright
 
 This document has been placed in the public domain.
+
 
