--- a/tip/538.md
+++ b/tip/538.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        9-April-2019
 	Post-History:
 	Keywords:       Tcl
