--- a/tip/542.md
+++ b/tip/542.md
@@ -16,7 +16,11 @@
 
 This TIP proposes being able to switch Tcl between Full Unicode mode
 (TCL\_UTF\_MAX>3, almost compatible with Androwish) and current partial
-Unicode mode (as far as TIP #389 goes, using `TCL_UTF_MAX=3`) 
+Unicode mode (as far as TIP #389 goes, using `TCL_UTF_MAX=3`)
+
+Full Unicode mode means that \[string length \\U10000\] will no longer
+return `2` but the expected `1`, so Unicode characters larger than \\uFFFF
+will no longer internally be split into two surrogate characters.
 
 # Rationale
 
@@ -35,12 +39,9 @@ of the Tcl\_UniChar type using TCL\_UTF\_MAX=6. This causes a binary incompatibi
 which results that all extensions need to be re-compiled with TCL\_UTF\_MAX=6 as well.
 This TIP proposes to add a supported TCL\_UTF\_MAX=4 compilation mode to Tcl, which has
 the same effect as the earlier unsupported TCL\_UTF\_MAX=6, but without the need to
-re-compile all extensions. The need for re-compilation of all extensions is eliminated
-by putting the 32-bit versions of the Tcl\_UniChar-related functions in different stub
-entries than the 16-bit versions. This way, 99% of all extensions compiled with
-TCL\_UTF\_MAX=3 keep functioning as before without the need for re-compilation.
+re-compile all extensions.
 
-The default compilation mode for Tcl will continue to be TCL\_UTF\_MAX=3, which is 100%
+The default compilation mode for Tcl 8.x will continue to be TCL\_UTF\_MAX=3, which is 100%
 upwards compatible with Tcl 8.6.
 
 # Specification
@@ -48,24 +49,14 @@ upwards compatible with Tcl 8.6.
 This document proposes:
 
  * Allow Tcl to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4.
-   In the latter mode, the Tcl_UniChar type becomes a 32-bit type, but the stub entries for
-   the 16-bit Tcl\_UniChar type are present as well. So, most extensions compiled with -DTCL\_UTF\_MAX=3
-   will continue to work in either Tcl mode (for caveats, see below).
+   In the latter mode, the Tcl_UniChar type becomes a 32-bit type.
 
  * Allow Tcl extensions to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4,
-   when Tcl is compiled with -DTCL\_UTF\_MAX=4.
+   independant from how Tcl is compiled.
 
  * Deprecate the following functions:
 
      Tcl\_AppendUnicodeToObj()
-
-     Tcl\_GetUnicode()
-
-     Tcl\_GetUnicodeFromObj()
-
-     Tcl\_NewUnicodeObj()
-
-     Tcl\_SetUnicodeObj()
 
      Tcl\_UniCharCaseMatch()
 
@@ -75,18 +66,23 @@ This document proposes:
 
      Tcl\_UniCharNcasecmp()
 
-   If Tcl is compiled with either -DTCL\_UTF\_MAX=4 or -DTCL\_NO\_DEPRECATED, those functions will no longer be available for extensions, as well as in Tcl 9.0.
+   If Tcl is compiled with either -DTCL\_UTF\_MAX=4 or -DTCL\_NO\_DEPRECATED, those functions will no longer be available for extensions.
+   In Tcl 9.0 those 5 functions will be completely gone.
 
+ * Deprecate the following functions when Tcl is compiled in a different -DTCL\_UTF\_MAX mode than the extension.
 
- * New function:
-     
-     Tcl\_UtfToUtf16()
+     Tcl\_GetUnicode()
 
-     This function does almost the same as Tcl\_UtfToUniChar(), but it writes 16-bit Unicode Characters ("unsigned short") independent
-     of the value of -DTCL\_UTF\_MAX.
+     Tcl\_GetUnicodeFromObj()
 
-     This function can be used if you want your extension to compile with either -DTCL\_UTF\_MAX=3 or -DTCL\_UTF\_MAX=4,
-     but still want to use the 16-bit conversions independent on the TCL\_UTF\_MAX setting or Tcl\_UniChar type.
+     Tcl\_NewUnicodeObj()
+
+     Tcl\_SetUnicodeObj()
+
+   If Tcl is compiled with a different TCL\_UTF\_MAX value than the extension, those 4 functions cannot be used.
+   In order to keep binary compatibility with 8.6, those 4 functions are not supported for extensions compiled
+   with -DTCL\_UTF\_MAX=4. You can use the functions in TIP #548 instead, for converting between Tcl_UniChar
+   and UTF-8.
 
 # Compatibility
 
@@ -94,7 +90,7 @@ As long as Tcl is compiled with -DTCL\_UTF\_MAX=3, this is fully upwards compati
 
 When Tcl is compiled with -DTCL\_UTF\_MAX=4, this is at the Tcl level, compatible with the Androwish-version
 of Tcl. At the C-API level, it's upwards compatible with Tcl 8.6 in TCL\_UTF\_MAX=6 mode, except for the
-functions marked above as deprecated. Those functions will be gone.
+functions mentioned above.
 
 # Caveats
 
@@ -102,7 +98,7 @@ functions marked above as deprecated. Those functions will be gone.
    Using any of them results in a link error.
 
  * If Tcl is compiled with -DTCL\_UTF\_MAX=4, the deprecated functions will be gone. Any
-   extension using those, even if the extesion is compiled with -DTCL\_UTF\_MAX=3, won't work any more.
+   extension using those, even if the extension is compiled with -DTCL\_UTF\_MAX=3, won't work any more.
 
 # Reference Implementation
 
