--- a/tip/552.md
+++ b/tip/552.md
@@ -27,11 +27,12 @@ The following features are added to the treeview widget.
 
 ## Locked horizontal scrolling
 
-Adds the ability to lock the first column(s) from horizontal scrolling.
+Adds the ability to lock the first display column(s) from horizontal scrolling.
 
 A new option **-titlecolumns** *n* is added, requesting columns to be locked.
-The tree column counts, even if **-show tree** is not specified. Thus for
-value N of this option, column #N is the first one that is scrollable.
+The tree column counts, even if **-show tree** is not specified.
+This is to follow the semantics of #N-indexing of columns.
+Thus for value N of this option, column #N is the first one that is scrollable.
 
 ## Cell selection
 
@@ -51,6 +52,8 @@ use either item selection or cell selection.
 The **identify** subcommand is updated with the **cell** option.
 
 Default bindings are updated to use these features.
+
+The <<TreeviewSelect>> virtual event triggers on any selection change including cellselection.
 
 ## Striped rows
 
