Examples added adn doc links corrected

--- a/tip/556.md
+++ b/tip/556.md
@@ -76,8 +76,8 @@ repository in the [tip-556 branch](https://core.tcl-lang.org/tk/timeline?r=tip-5
 
 Documentation is available in md-Format in the .../doc/ directory.
 
-- [`tko.3.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tkoWidget.3.md) C interface
-- [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tkoWidget.n.md) Tcl interface
+- [`tko.3.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.3.md) C interface
+- [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md) Tcl interface
 
 ## C interface
 
@@ -98,13 +98,35 @@ Test files are available in the .../tests/tko/ directory.
 
 - [`tkoFrame.test`](https://core.tcl-lang.org/tk/doc/tip-556/tests/tko/tkoFrame.test) tests from the tk frame.test file plus additional **oo::class** related tests
 
+To compare the speed of the new widgets you can run the test frame-30.1. It will compare normal tk, ttk and tko widgets.
+
 # Discussion
 
 See also discussion at the [wiki](http://wiki.tcl.tk/55360).
 
+# Examples
+
+Create a new oo tcl widget class:
+    oo::class create myWidget {::tko initfrom ::tko::frame}
+
+Add new methods:
+    oo::define ::myWidget method mycmd {args} {my {*}$args}
+
+Add new class options:
+    ::tko optionadd ::myWidget -o1 o1 O1 v1 {} {set tko(-o1) x}
+
+Add new object options:
+    oo::define ::myWidget method mycmd {args} {my {*}$args}
+    ::myWidget .x
+    .x mycmd _tko optionadd -o2 o2 O2 v2 {} {puts o2=$tko(-o2)}
+
 # Open issues
 
+the following funtion from tkoWidget.c should be an tcl::oo function:
+    Tcl_Obj *Widget_GetClassName(Tcl_Interp * interp,Tcl_Object object)
+
 - Is it necessary to translate the documentation into man format?
+
 - It is currently not possible to use unique abbreviations of class method names p.e. "frame .f; .f conf" A workaround would be to add all those method names. May be this can be solved in tcl::oo directly?
 
 # Alternatives
