--- a/tip/542.md
+++ b/tip/542.md
@@ -5,7 +5,7 @@
 	Type:           Project
 	Vote:           Pending
 	Created:        10-May-2019
-	Post-History:   
+	Post-History:
 	Discussions-To: Tcl Core list
 	Keywords:       Tcl
 	Tcl-Version:    8.7
@@ -52,7 +52,7 @@ This document proposes:
    In the latter mode, the Tcl_UniChar type becomes a 32-bit type.
 
  * Allow Tcl extensions to be compiled with either -DTCL\_UTF\_MAX=3 (default), or with -DTCL\_UTF\_MAX=4,
-   independant from how Tcl is compiled.
+   independent from how Tcl is compiled.
 
  * Deprecate the following functions:
 
@@ -97,8 +97,9 @@ functions mentioned above.
  * Extensions compiled with -DTCL\_UTF\_MAX=4 cannot use any of the deprecated functions mentioned in this TIP.
    Using any of them results in a link error.
 
- * If Tcl is compiled with -DTCL\_UTF\_MAX=4, the deprecated functions will be gone. Any
-   extension using those, even if the extension is compiled with -DTCL\_UTF\_MAX=3, won't work any more.
+ * If Tcl is compiled with -DTCL\_UTF\_MAX=4, the deprecated functions will be removed from the stub-table. Any
+   extension using those, even if the extension is compiled with -DTCL\_UTF\_MAX=3, won't work any more: This
+   results in a panic clearly indicating the problem.
 
 # Reference Implementation
 
