--- a/tip/542.md
+++ b/tip/542.md
@@ -41,8 +41,20 @@ This TIP proposes to add a supported TCL\_UTF\_MAX=4 compilation mode to Tcl, wh
 the same effect as the earlier unsupported TCL\_UTF\_MAX=6, but without the need to
 re-compile all extensions.
 
+There are 5 functions which expose the internal structure of Tcl strings to extensions,
+functions that are rarely used in extensions. Those are `Tcl_AppendUnicodeToObj()`,
+`Tcl_UniCharCaseMatch()`, `Tcl_UniCharLen()`, `Tcl_UniCharNcmp()` and `Tcl_UniCharNcasecmp()`.
+They all have a UTF-8 equivalent which can be used instead. Switching TCL\_UTF\_MAX
+to a different value causes a binary incompatibility, but it's not worth to do
+anything about it. That's why this TIP proposes to deprecate them, and have them
+removed completely in Tcl 9.0.
+
 The default compilation mode for Tcl 8.x will continue to be TCL\_UTF\_MAX=3, which is 100%
 upwards compatible with Tcl 8.6.
+
+This TIP opens the room to be able to switch Tcl using TCL\_UTF\_MAX=4 eventually for
+Tcl 9.0. More work needs to be done for that, but that's stuff for TIP #497. This TIP
+describes how far we can go for Tcl 8.x without causing unacceptable binary incompatibilities.
 
 # Specification
 
@@ -100,6 +112,10 @@ functions mentioned above.
  * If Tcl is compiled with -DTCL\_UTF\_MAX=4, the deprecated functions will be removed from the stub-table. Any
    extension using those, even if the extension is compiled with -DTCL\_UTF\_MAX=3, won't work any more: This
    results in a panic clearly indicating the problem.
+
+Remark: All extensions bundled with Tcl (and Tk 8.7a3 as well) are already modified not to use any of those
+deprecated functions any more. So they can be compiled with any TCL\_UTF\_MAX value, independent on the
+TCL\_UTF\_MAX value Tcl was compiled with.
 
 # Reference Implementation
 
