Initial implementation of TIP 551

--- a/tip/551.md
+++ b/tip/551.md
@@ -84,6 +84,10 @@ includes this,
       ...
     }
 
+# Implementation
+
+See branch tip-551
+
 # Copyright
 
 This document has been placed in the public domain.
