--- a/tip/551.md
+++ b/tip/551.md
@@ -6,9 +6,10 @@
     Created:       16-Sep-2019
     Post-History:
     Tcl-Version:   8.7
+    Tcl-Branch:    tip-551
     Keywords:      numbers, readability
     Sponsor:       Brian Griffin <brian_griffin@mentor.com>
-    
+
 # Abstract
 
 This TIP proposes that all numbers in scripts shall allow underscores
