--- a/tip/538.md
+++ b/tip/538.md
@@ -1,13 +1,17 @@
 # TIP 538: Externalize libtommath
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        9-April-2019
 	Post-History:
 	Keywords:       Tcl
 	Tcl-Version:    8.7
 	Tcl-Branch:     digit-bit-60
+	Vote-Results:   5/0/0 accepted
+	Votes-For:      JN, KBK, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
