New Option eventchanged and more documentation

--- a/tip/556.md
+++ b/tip/556.md
@@ -12,7 +12,7 @@
 
 # Abstract
 
-## New ew oo::class like widgets
+## New oo::class like widgets
 
 **::tko::toplevel** *pathName ?option value? ..*
 
@@ -20,7 +20,7 @@
 
 **::tko::labelframe** *pathName ?option value? ..*
 
-> The new widgets will contain the same functionality like the original *tk* widgets. They are *oo:class*'s and it is possible to add,change and delete methods and options dynamically. The widgets could also be used as oo *superclass*'s.
+The new widgets will contain the same functionality like the original *tk* widgets. They are *oo:class*'s and it is possible to add,change and delete methods and options dynamically. The widgets could also be used as oo *superclass*'s.
 
 > The interface functions to build new widgets in C are described in 
 [`tko.3.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.3.md).
@@ -29,13 +29,15 @@
 
 **::oo::class create** *widgetclass* { **::tko initfrom** *::tkoclass* }
 
-> The **tko initfrom** function is used to create new oo class like widget in Tcl.
+The **tko initfrom** function is used to create new oo class like widget in Tcl.
 
 ## Class functions
 
 To provide dynamic option management at class level exists a **::tko** function.
 
 **::tko initfrom** *?::superclass?*
+
+**::tko eventchanged**
 
 **::tko optionadd** *::classname ?-option dbname dbclass value flags ?body?*
 
@@ -61,7 +63,7 @@ To manage options on object level exists an **\_tko** method.
 
 **my \_tko optionshow** *-option* ..
 
-> A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md).
+A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md).
 
 # Rationale
 
@@ -83,7 +85,11 @@ Documentation is available in md-Format in the .../doc/ directory.
 
 C-source interface files are in `.../generic/tko/`.  No functionality is currently exported.
 
-- [`tkoWidget.h`](https://core.tcl-lang.org/tk/doc/tip-556/generic/tko/tkoWidget.h) **Tko\_widget** C functions and definitions.
+- [`tkoWidget.h`](https://core.tcl-lang.org/tk/doc/tip-556/generic/tko/tkoWidget.h) **Tko\_Widget** C functions and definitions.
+
+- The Tko\_Widget\*() functions should be available for extensions.
+
+- The Tko\_Widget\* enum and structures should be included in file "tk.h" 
 
 ## C sources
 
@@ -99,10 +105,6 @@ Test files are available in the .../tests/tko/ directory.
 - [`tkoFrame.test`](https://core.tcl-lang.org/tk/doc/tip-556/tests/tko/tkoFrame.test) tests from the tk frame.test file plus additional **oo::class** related tests
 
 To compare the speed of the new widgets you can run the test frame-30.1. It will compare normal tk, ttk and tko widgets.
-
-# Discussion
-
-See also discussion at the [wiki](http://wiki.tcl.tk/55360).
 
 # Examples
 
@@ -120,14 +122,36 @@ Add new object options:
     ::myWidget .x
     .x mycmd _tko optionadd -o2 o2 O2 v2 {} {puts o2=$tko(-o2)}
 
+Intercept options:
+    oo::define ::myWidget method -width {} {
+        puts "[my cget -width]->$tko(-width)->[set tko(-width) 100]"
+    }
+    .w configure -width 1
+
+Use option database for styles:
+    option add *background red
+    grid [tko::frame .f] -sticky nesw
+    grid [label .f.l -text abc]
+    grid columnconfigure . 1 -weight 1
+    option add *background blue
+    tko eventchanged
+ 
+# Discussion
+
+See also discussion at the [wiki](http://wiki.tcl.tk/55360).
+
 # Open issues
 
-the following funtion from tkoWidget.c should be an tcl::oo function:
+- Export functionality from `tkoWidget.h`
+
+- The following function from `tkoWidget.c` should be an tcl oo function (tcl rfe 3ff0e9c37):
     Tcl_Obj *Widget_GetClassName(Tcl_Interp * interp,Tcl_Object object)
 
 - Is it necessary to translate the documentation into man format?
 
-- It is currently not possible to use unique abbreviations of class method names p.e. "frame .f; .f conf" A workaround would be to add all those method names. May be this can be solved in tcl::oo directly?
+- It is currently not possible to use unique abbreviations of class method names p.e. "frame .f; .f conf" A workaround would be to add all those method names. May be this can be solved in tcl oo directly?
+
+- An oo widgets needs more time to create then an normal tk widget, nearly the same time to call functions and less time to destroy. But the time is comparable to tko widgets (see in tests/tko/tkoFrame.test test frame-30.1). This needs some investigation. The authors current assumption is the time is spent in calling "**my** *-option*" methods from inside C. Currently **Tcl\_EvalObjv()** is used. Are there better ways?
 
 # Alternatives
 
